text align fix

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,4 +1,4 @@
-h3 {
+body h3 {
   text-align: center;
 }
 
